Introduce a bit of grace on shutdown